--- a/tuningpredictor.bib
+++ b/tuningpredictor.bib
@@ -1938,3 +1938,13 @@ year = {2012}
   year={2004},
   publisher={Cambridge university press}
 }
+
+@article{xie2009data,
+  title={Data mining for software engineering},
+  author={Xie, Tao and Thummalapenta, Suresh and Lo, David and Liu, Chao},
+  journal={Computer},
+  number={8},
+  pages={55--62},
+  year={2009},
+  publisher={IEEE}
+}
